{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 17,
  "lineage": "aa1d21ec-91f0-eaf0-58f4-0453a0f9f6ad",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0e4be90614921fb2c",
            "public_dns": "ec2-13-52-116-48.us-west-1.compute.amazonaws.com",
            "public_ip": "13.52.116.48",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW_TF",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:921477755354:internet-gateway/igw-0b201bcf02f4ed9db",
            "id": "igw-0b201bcf02f4ed9db",
            "owner_id": "921477755354",
            "tags": {
              "Name": "IGW_TF"
            },
            "vpc_id": "vpc-0e49962926f5e82b7"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e4be90614921fb2c",
            "id": "nat-080e24b953824b207",
            "network_interface_id": "eni-01145377dfb05a944",
            "private_ip": "192.168.54.42",
            "public_ip": "13.52.116.48",
            "subnet_id": "subnet-0e9b76334ac19bae2",
            "tags": {
              "Name": "NATGW"
            }
          },
          "dependencies": [
            "aws_eip.EIP",
            "aws_subnet.public_A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privatert",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e8cf57eb118bcd2f",
            "owner_id": "921477755354",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-080e24b953824b207",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "privatert"
            },
            "vpc_id": "vpc-0e49962926f5e82b7"
          },
          "dependencies": [
            "aws_eip.EIP",
            "aws_nat_gateway.NATGW",
            "aws_subnet.public_A",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-072ca815a2fbfe7ec",
            "owner_id": "921477755354",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b201bcf02f4ed9db",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicrt"
            },
            "vpc_id": "vpc-0e49962926f5e82b7"
          },
          "dependencies": [
            "aws_internet_gateway.IGW_TF",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062e06cf6a965dc7a",
            "route_table_id": "rtb-072ca815a2fbfe7ec",
            "subnet_id": "subnet-0e9b76334ac19bae2"
          },
          "dependencies": [
            "aws_internet_gateway.IGW_TF",
            "aws_route_table.publicrt",
            "aws_subnet.public_A",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3078466467350db",
            "route_table_id": "rtb-072ca815a2fbfe7ec",
            "subnet_id": "subnet-059da51a2c192da2f"
          },
          "dependencies": [
            "aws_internet_gateway.IGW_TF",
            "aws_route_table.publicrt",
            "aws_subnet.public_B",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054373b3049640859",
            "route_table_id": "rtb-0e8cf57eb118bcd2f",
            "subnet_id": "subnet-08f403aad7f85bcd5"
          },
          "dependencies": [
            "aws_eip.EIP",
            "aws_nat_gateway.NATGW",
            "aws_route_table.privatert",
            "aws_subnet.private_A",
            "aws_subnet.public_A",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09733b38309e70c4c",
            "route_table_id": "rtb-0e8cf57eb118bcd2f",
            "subnet_id": "subnet-0c428b573029577ee"
          },
          "dependencies": [
            "aws_eip.EIP",
            "aws_nat_gateway.NATGW",
            "aws_route_table.privatert",
            "aws_subnet.private_B",
            "aws_subnet.public_A",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:921477755354:subnet/subnet-08f403aad7f85bcd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "192.168.128.0/18",
            "id": "subnet-08f403aad7f85bcd5",
            "map_public_ip_on_launch": true,
            "owner_id": "921477755354",
            "tags": {
              "Name": "private_A"
            },
            "vpc_id": "vpc-0e49962926f5e82b7"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:921477755354:subnet/subnet-0c428b573029577ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "192.168.192.0/18",
            "id": "subnet-0c428b573029577ee",
            "map_public_ip_on_launch": true,
            "owner_id": "921477755354",
            "tags": {
              "Name": "private_B"
            },
            "vpc_id": "vpc-0e49962926f5e82b7"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:921477755354:subnet/subnet-0e9b76334ac19bae2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "192.168.0.0/18",
            "id": "subnet-0e9b76334ac19bae2",
            "map_public_ip_on_launch": true,
            "owner_id": "921477755354",
            "tags": {
              "Name": "public_A"
            },
            "vpc_id": "vpc-0e49962926f5e82b7"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:921477755354:subnet/subnet-059da51a2c192da2f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "192.168.64.0/18",
            "id": "subnet-059da51a2c192da2f",
            "map_public_ip_on_launch": true,
            "owner_id": "921477755354",
            "tags": {
              "Name": "public_B"
            },
            "vpc_id": "vpc-0e49962926f5e82b7"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mainvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:921477755354:vpc/vpc-0e49962926f5e82b7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-04a69cbda56bf9364",
            "default_route_table_id": "rtb-0152166edec6f2a5b",
            "default_security_group_id": "sg-09ab26a1656d042ce",
            "dhcp_options_id": "dopt-21be5d47",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e49962926f5e82b7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0152166edec6f2a5b",
            "owner_id": "921477755354",
            "tags": {
              "Name": "VPC_TF"
            }
          }
        }
      ]
    }
  ]
}